--- a/rosbridge/Backend/package.json
+++ b/rosbridge/Backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "envault": "^3.1.0",
